# mymosquitto

./: .gitignore  CMakeLists.txt  ChangeLog.txt  config.mk  readme.md
android/: CMakeLists.txt  android.toolchain.cmake  client_android.c  client_shared.c  main_jni.h  mqtt_android.c  mqtt_android.h  mqtt_jni.h  mqtt_main.h  pub_client.c  sub_client.c
android/java/: MosquittoJNI.java  com_mqtt_jni_MosquittoJNI.h  compile.md
android/java/com/mqtt/jni/: MessageListener.java  MosquittoJNI.java  ReceiveMessage.java
android/lib/: libcrypto.so.1.1  libssl.so.1.1
android/lib/arm/: libcrypto.so.1.1  libssl.so.1.1
android/lib/arm64/: libcrypto.so.1.1  libssl.so.1.1
civetweb/: CMakeLists.txt  mqtt_main.h  sub_client.c
client/: CMakeLists.txt  pub_client.c  sub_client.c
clientcore/: CMakeLists.txt  mqtt_main.h  mqtt_message.h
ios/: CMakeLists.txt  mqtt_ios.c  mqtt_ios.h  sub_client.c
lib/: CMakeLists.txt  mosquitto.c  thread_mosq.c
msgpack/: CMakeLists.txt
msgpack/include/: mqtt_message.h
pushlib/: CMakeLists.txt  _cgo_export.h  embedded_cpp.cpp  sub_client.c
src/: database.c  logging.c  loop.c  mosquitto_broker_internal.h
